// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`no features 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="20px"
    style="display: block;"
    width="100px"
  />
</div>
`;

exports[`one feature (compact mode) 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="5px"
    style="display: block;"
    width="333.3333333333333px"
  >
    <g>
      <polyline
        data-testid="one"
        points="1991.7,2.5,3248.0333333333333,2.5,3246.7833333333333,1.25,3246.7833333333333,3.75,3248.0333333333333,2.5"
        stroke="black"
      />
      <rect
        data-testid="one-0"
        fill="#357089"
        height="3.25"
        width="44.666666666666664"
        x="1991.7"
        y="0.875"
      />
      <rect
        data-testid="one-2"
        fill="goldenrod"
        height="5"
        width="12.666666666666666"
        x="2036.7"
        y="0"
      />
      <rect
        data-testid="one-3"
        fill="goldenrod"
        height="5"
        width="22.666666666666668"
        x="2205.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-4"
        fill="goldenrod"
        height="5"
        width="94"
        x="2252.7"
        y="0"
      />
      <rect
        data-testid="one-5"
        fill="goldenrod"
        height="5"
        width="59"
        x="2380.7"
        y="0"
      />
      <rect
        data-testid="one-6"
        fill="goldenrod"
        height="5"
        width="92"
        x="2470.366666666667"
        y="0"
      />
      <rect
        data-testid="one-7"
        fill="goldenrod"
        height="5"
        width="34"
        x="2582.7"
        y="0"
      />
      <rect
        data-testid="one-8"
        fill="goldenrod"
        height="5"
        width="48.333333333333336"
        x="2651.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-9"
        fill="goldenrod"
        height="5"
        width="51.333333333333336"
        x="2722.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-10"
        fill="goldenrod"
        height="5"
        width="65"
        x="2806.366666666667"
        y="0"
      />
      <rect
        data-testid="one-11"
        fill="goldenrod"
        height="5"
        width="34.333333333333336"
        x="2902.7"
        y="0"
      />
      <rect
        data-testid="one-12"
        fill="goldenrod"
        height="5"
        width="104"
        x="2975.7"
        y="0"
      />
      <rect
        data-testid="one-13"
        fill="goldenrod"
        height="5"
        width="26.666666666666668"
        x="3138.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-15"
        fill="#357089"
        height="3.25"
        width="83"
        x="3165.0333333333333"
        y="0.875"
      />
    </g>
  </svg>
</div>
`;

exports[`one feature 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="10px"
    style="display: block;"
    width="333.3333333333333px"
  >
    <g>
      <rect
        data-testid="box-one"
        fill="goldenrod"
        height="10"
        width="1"
        x="0.3"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`processed transcript (exons + impliedUTR) 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="52px"
    style="display: block;"
    width="333.3333333333333px"
  >
    <g>
      <polyline
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-0"
        points="28577152.7,5,28580771.7,5,28580769.2,2.5,28580769.2,7.5,28580771.7,5"
        stroke="black"
        transform="rotate(180,28578962.2,5)"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-0_three_prime_UTR_0"
        fill="#357089"
        height="6.5"
        width="333.3333333333333"
        x="28577152.7"
        y="1.75"
      />
      <polygon
        fill="#357089"
        points="28577152.7,1.75,28577149.45,5,28577152.7,8.25"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-0-1"
        fill="goldenrod"
        height="10"
        width="118.66666666666667"
        x="28577769.7"
        y="0"
      />
      <polygon
        fill="goldenrod"
        points="28577769.7,0,28577764.7,5,28577769.7,10"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-0-2"
        fill="goldenrod"
        height="10"
        width="96.33333333333333"
        x="28578766.7"
        y="0"
      />
      <polygon
        fill="goldenrod"
        points="28578766.7,0,28578761.7,5,28578766.7,10"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-0-3"
        fill="goldenrod"
        height="10"
        width="19"
        x="28580659.366666667"
        y="0"
      />
      <polygon
        fill="goldenrod"
        points="28580659.366666667,0,28580654.366666667,5,28580659.366666667,10"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-0_five_prime_UTR_2"
        fill="#357089"
        height="6.5"
        width="93.33333333333333"
        x="28580678.366666667"
        y="1.75"
      />
      <polygon
        fill="#357089"
        points="28580678.366666667,1.75,28580675.116666667,5,28580678.366666667,8.25"
      />
      <polyline
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-1"
        points="28577152.7,17,28580771.7,17,28580769.2,14.5,28580769.2,19.5,28580771.7,17"
        stroke="black"
        transform="rotate(180,28578962.2,17)"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-1_three_prime_UTR_0"
        fill="#357089"
        height="6.5"
        width="333.3333333333333"
        x="28577152.7"
        y="13.75"
      />
      <polygon
        fill="#357089"
        points="28577152.7,13.75,28577149.45,17,28577152.7,20.25"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-1-1"
        fill="goldenrod"
        height="10"
        width="107.66666666666667"
        x="28577769.7"
        y="12"
      />
      <polygon
        fill="goldenrod"
        points="28577769.7,12,28577764.7,17,28577769.7,22"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-1-2"
        fill="goldenrod"
        height="10"
        width="96.33333333333333"
        x="28578766.7"
        y="12"
      />
      <polygon
        fill="goldenrod"
        points="28578766.7,12,28578761.7,17,28578766.7,22"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-1-3"
        fill="goldenrod"
        height="10"
        width="19"
        x="28580659.366666667"
        y="12"
      />
      <polygon
        fill="goldenrod"
        points="28580659.366666667,12,28580654.366666667,17,28580659.366666667,22"
      />
      <rect
        data-testid="type-Gff3TabixAdapter;type-Gff3TabixAdapter;uri-https://s3.amazonaws.com/jbrowse.org/genomes/hg19/nc-offset-294046480-1_five_prime_UTR_2"
        fill="#357089"
        height="6.5"
        width="93.33333333333333"
        x="28580678.366666667"
        y="13.75"
      />
      <polygon
        fill="#357089"
        points="28580678.366666667,13.75,28580675.116666667,17,28580678.366666667,20.25"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="28577152.7"
        y="24"
      >
        BCL10
      </text>
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: blue; cursor: default;"
        x="28577152.7"
        y="39"
      >
        BCL10 immune signaling adaptor
      </text>
    </g>
  </svg>
</div>
`;

exports[`processed transcript (reducedRepresentation mode) 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="10px"
    style="display: block;"
    width="333.3333333333333px"
  >
    <g>
      <rect
        data-testid="one"
        fill="goldenrod"
        height="10"
        width="1"
        x="0.3"
        y="0"
      />
    </g>
  </svg>
</div>
`;

exports[`processed transcript 1`] = `
<div
  style="position: relative;"
>
  <svg
    class="SvgFeatureRendering"
    height="25px"
    style="display: block;"
    width="333.3333333333333px"
  >
    <g>
      <polyline
        data-testid="one"
        points="1991.7,5,3248.0333333333333,5,3245.5333333333333,2.5,3245.5333333333333,7.5,3248.0333333333333,5"
        stroke="black"
      />
      <rect
        data-testid="one-0"
        fill="#357089"
        height="6.5"
        width="44.666666666666664"
        x="1991.7"
        y="1.75"
      />
      <rect
        data-testid="one-2"
        fill="goldenrod"
        height="10"
        width="12.666666666666666"
        x="2036.7"
        y="0"
      />
      <rect
        data-testid="one-3"
        fill="goldenrod"
        height="10"
        width="22.666666666666668"
        x="2205.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-4"
        fill="goldenrod"
        height="10"
        width="94"
        x="2252.7"
        y="0"
      />
      <rect
        data-testid="one-5"
        fill="goldenrod"
        height="10"
        width="59"
        x="2380.7"
        y="0"
      />
      <rect
        data-testid="one-6"
        fill="goldenrod"
        height="10"
        width="92"
        x="2470.366666666667"
        y="0"
      />
      <rect
        data-testid="one-7"
        fill="goldenrod"
        height="10"
        width="34"
        x="2582.7"
        y="0"
      />
      <rect
        data-testid="one-8"
        fill="goldenrod"
        height="10"
        width="48.333333333333336"
        x="2651.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-9"
        fill="goldenrod"
        height="10"
        width="51.333333333333336"
        x="2722.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-10"
        fill="goldenrod"
        height="10"
        width="65"
        x="2806.366666666667"
        y="0"
      />
      <rect
        data-testid="one-11"
        fill="goldenrod"
        height="10"
        width="34.333333333333336"
        x="2902.7"
        y="0"
      />
      <rect
        data-testid="one-12"
        fill="goldenrod"
        height="10"
        width="104"
        x="2975.7"
        y="0"
      />
      <rect
        data-testid="one-13"
        fill="goldenrod"
        height="10"
        width="26.666666666666668"
        x="3138.0333333333333"
        y="0"
      />
      <rect
        data-testid="one-15"
        fill="#357089"
        height="6.5"
        width="83"
        x="3165.0333333333333"
        y="1.75"
      />
      <text
        dominant-baseline="hanging"
        style="font-size: 13px; fill: black; cursor: default;"
        x="1991.7"
        y="12"
      >
        au9.g1002.t1
      </text>
    </g>
  </svg>
</div>
`;

exports[`svg selected 1`] = `
<svg>
  <rect
    data-testid="one"
    fill="#000"
    fill-opacity="0.2"
    height="14"
    width="7.3"
    x="-2"
    y="-2"
  />
  <rect
    fill="none"
    height="14"
    stroke="#00b8ff"
    width="7.3"
    x="-2"
    y="-2"
  />
</svg>
`;
